# dianbot

./: .env  .env.dev  .gitignore  Dockerfile  README.md  bot.py  compose.yml  gamelist.json  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main_dianbot.yml  release.yml
bot/: __init__.py
config/: __init__.py
lib/: __init__.py  openai.py
log/: __init__.py
robot/: __init__.py
robot/commands/: __init__.py
robot/loader/: __init__.py
robot/tasks/: __init__.py
sample/: test.py
src/: bot.py  main.py
src/bot/: __init__.py
src/plugins/ping/: __init__.py
src/tasks/: __init__.py
src/web/: __init__.py
tool/: announcement.py  compose.dev.yml  compose.yml
web/: __init__.py
