[tool.poetry]
name = "dianbot"
version = "0.1.0"
description = ""
authors = ["dianhsu <xudian.cn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nonebot2 = {extras = ["fastapi", "httpx"], version = "^2.0.1"}
nonebot-adapter-console = "^0.4.0"
nonebot-adapter-kaiheila = "^0.2.8"
nonebot-plugin-apscheduler = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"